[MIG] mass_mailing_event: Migration to 10.0
OCA Transbot updated translations from Transifex

--- a/mass_mailing_event_registration_exclude/views/mass_mailing_view.xml
+++ b/mass_mailing_event_registration_exclude/views/mass_mailing_view.xml
@@ -2,8 +2,7 @@
 <!-- Copyright 2016 Antonio Espinosa <antonio.espinosa@tecnativa.com>
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
 
-<openerp>
-<data>
+<odoo>
 
 <record model="ir.ui.view" id="view_mail_mass_mailing_form">
     <field name="name">Add event and exclude</field>
@@ -29,5 +28,4 @@
     </field>
 </record>
 
-</data>
-</openerp>
+</odoo>
