--- a/mail_edit/static/src/css/mail_edit.css
+++ b/mail_edit/static/src/css/mail_edit.css
@@ -7,3 +7,12 @@
                  1px 0px #184FC5,
                  0px 3px 3px rgba(0, 0, 0, 0.1);
 }
+
+.openerp .oe_mail .oe_msg .oe_msg_icons .oe_delete:hover a {
+    color: #ffa1a1;
+    text-shadow: 0px  1px #ff0000,
+                 0px -1px #ff0000,
+                -1px  0px #ff0000,
+                 1px  0px #ff0000,
+                 0px  3px 3px rgba(0,0,0,0.1);
+}
