--- a/mass_mailing_resend/views/mass_mailing_views.xml
+++ b/mass_mailing_resend/views/mass_mailing_views.xml
@@ -13,7 +13,7 @@
                 />
             </field>
             <header position="after">
-                <div class="alert alert-warning oe_text_center" attrs="{'invisible': ['|', ('state', '!=', 'draft'), ('sent', '=', 0)]}">
+                <div class="oe_form_box_info bg-warning oe_text_center" attrs="{'invisible': ['|', ('state', '!=', 'draft'), ('sent', '=', 0)]}">
                     <p>
                         <i class="fa fa-info-circle"/> New sending will be done only to not sent/new recipients. If you want to resend again the mass mailing to already sent recipients, click on <b>Emails Sent</b> smart-button for removing the existing record(s).
                     </p>
