--- a/mass_mailing_custom_unsubscribe/templates/mass_mailing_contact_reason.xml
+++ b/mass_mailing_custom_unsubscribe/templates/mass_mailing_contact_reason.xml
@@ -4,23 +4,31 @@
 
 <odoo>
 
-<template id="unsubscribe"
-          inherit_id="website_mass_mailing.unsubscribe"
-          name="Add Reasons to Mailing List Management Form">
-    <!-- Disable core AJAX submission of form, because it is impossible to
-         extend it as it is designed right now. It is refactored in this addon.
-         TODO Remove when merged https://github.com/odoo/odoo/pull/14386. -->
-    <xpath expr="//div[hasclass('container', 'o_unsubscribe_form')]"
-           position="attributes">
-        <attribute name="class" value="container o_unsubscribe_form_custom"/>
-    </xpath>
+    <template id="unsubscribe" inherit_id="mass_mailing.unsubscribe" name="Add Reasons to Mailing List Management Form">
+        <!-- Hide original feedback textarea to put another one after mailing lists checkboxes -->
+        <xpath expr="//div[@id='div_feedback']" position="attributes">
+            <attribute name="class" add="d-none" separator=" "/>
+        </xpath>
 
-    <!-- Add reasons to mass mailing list manager -->
-    <xpath expr="//t[@t-as='contact']/.." position="after">
-        <t t-call="mass_mailing_custom_unsubscribe.reason">
-            <t t-set="extra_class" t-value="'hidden'"/>
-        </t>
-    </xpath>
-</template>
+        <!-- Add reasons to mass mailing list manager -->
+        <xpath expr="//ul[hasclass('list-group')]" position="after">
+            <t t-call="mass_mailing_custom_unsubscribe.reason">
+                <t t-set="extra_class" t-value="'d-none'"/>
+            </t>
+        </xpath>
+    </template>
+
+    <template id="unsubscribed"
+              inherit_id="mass_mailing.unsubscribed"
+              name="Add Reasons to Blacklist Management Form">
+        <!-- Add reasons to blacklist manager  -->
+        <xpath expr="//div[@id='button_add_blacklist']" position="before">
+            <form id="unsubscribe_form">
+                <t t-call="mass_mailing_custom_unsubscribe.reason">
+                    <t t-set="extra_class" t-value="'d-none'"/>
+                </t>
+            </form>
+        </xpath>
+    </template>
 
 </odoo>
