--- a/mass_mailing_custom_unsubscribe/views/assets.xml
+++ b/mass_mailing_custom_unsubscribe/views/assets.xml
@@ -4,11 +4,10 @@
 
 <odoo>
 
-<template id="assets_frontend"
-          inherit_id="website.assets_frontend">
-    <xpath expr=".">
-        <script type="text/javascript"
-                src="/mass_mailing_custom_unsubscribe/static/src/js/require_details.js"/>
+<template id="assets_backend"
+          inherit_id="mass_mailing.assets_backend">
+    <!-- Need to replace the asset because upstream is impossible to extend -->
+    <xpath expr="//script[@src='/mass_mailing/static/src/js/unsubscribe.js']" position="replace">
         <script type="text/javascript"
                 src="/mass_mailing_custom_unsubscribe/static/src/js/unsubscribe.js"/>
     </xpath>
