--- a/website_mass_mailing_name/templates/assets.xml
+++ b/website_mass_mailing_name/templates/assets.xml
@@ -8,7 +8,7 @@
           inherit_id="website.assets_frontend">
     <xpath expr=".">
         <link rel="stylesheet"
-              href="/website_mass_mailing_name/static/src/css/website_mass_mailing_name.sass"/>
+              href="/website_mass_mailing_name/static/src/css/website_mass_mailing_name.scss"/>
         <script type="text/javascript"
                 src="/website_mass_mailing_name/static/src/js/website_mass_mailing_name.js"/>
     </xpath>
