--- a/website_mass_mailing_name/templates/snippets.xml
+++ b/website_mass_mailing_name/templates/snippets.xml
@@ -6,12 +6,16 @@
 
 <template id="s_newsletter_subscribe_form"
           inherit_id="website_mass_mailing.s_newsletter_subscribe_form">
-    <xpath expr="//input[@class='js_subscribe_email form-control']"
+    <xpath expr="//input[hasclass('js_subscribe_email')]"
            position="before">
         <input
             name="name"
             class="js_subscribe_name form-control"
+            required="required"
             placeholder="your name..."/>
+    </xpath>
+    <xpath expr="//input[hasclass('js_subscribe_email')]" position="attributes">
+        <attribute name="required">required</attribute>
     </xpath>
 </template>
 
