--- a/mail_full_expand/static/src/scss/mail_full_expand.scss
+++ b/mail_full_expand/static/src/scss/mail_full_expand.scss
@@ -1,4 +1,4 @@
-/* © 2014-2015 Grupo ESOC <http://www.grupoesoc.es>
+/* Copyright 2014-2015 Grupo ESOC <http://www.grupoesoc.es>
  * License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
  */
 
