--- a/mail_full_expand/views/assets.xml
+++ b/mail_full_expand/views/assets.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- © 2014-2015 Grupo ESOC <http://www.grupoesoc.es>
+<!-- Copyright 2014-2015 Grupo ESOC <http://www.grupoesoc.es>
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html). -->
 
 <openerp>
@@ -11,7 +11,8 @@
           inherit_id="web.assets_backend">
     <xpath expr="." position="inside">
         <link rel="stylesheet"
-              href="/mail_full_expand/static/src/css/mail_full_expand.less"/>
+              type="text/scss"
+              href="/mail_full_expand/static/src/scss/mail_full_expand.scss"/>
         <script type="text/javascript"
                 src="/mail_full_expand/static/src/js/mail_full_expand.js"/>
     </xpath>
