--- a/mail_full_expand/views/mail_full_expand.xml
+++ b/mail_full_expand/views/mail_full_expand.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- © 2014-2015 Grupo ESOC <http://www.grupoesoc.es>
+<!-- Copyright 2014-2015 Grupo ESOC <http://www.grupoesoc.es>
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html). -->
 
 <odoo>
@@ -23,6 +23,9 @@
                 <field name="attachment_ids"
                        widget="many2many_binary"
                        readonly="1"/>
+                <footer>
+                    <button string="Close" class="btn-secondary" special="cancel"/>
+                </footer>
             </form>
         </field>
     </record>
