[FIX] - substitution mail template have the same model as the base template

--- a/mail_template_substitute/views/mail_template.xml
+++ b/mail_template_substitute/views/mail_template.xml
@@ -26,7 +26,7 @@
                                            required="0"/>
                                     <field name="model" invisible="1"/>
                                     <field name="substitution_mail_template_id"
-                                           domain="[('id', '!=', parent.id)]"/>
+                                           domain="[('model', '=', model), ('id', '!=', parent.id)]"/>
                                 </group>
                                 <group>
                                     <field name="domain" widget="domain"
