--- a/mass_mailing_resend/views/mailing_mailing_views.xml
+++ b/mass_mailing_resend/views/mailing_mailing_views.xml
@@ -2,7 +2,7 @@
 <odoo>
 
     <record model="ir.ui.view" id="view_mail_mass_mailing_form">
-        <field name="model">mail.mass_mailing</field>
+        <field name="model">mailing.mailing</field>
         <field name="inherit_id" ref="mass_mailing.view_mail_mass_mailing_form"/>
         <field name="arch" type="xml">
             <field name="state" position="before">
