[MIG] mail_tracking_mass_mailing: Migration to 13.0
* Change references to mail_mail_statistics model with mail_trace
* Change references to mail.mass_mailing model with mailing.mailing
* Change reference to statistics_ids field with mailing_trace_ids
* Change reference to send_mail method with action_send_mail
* Replace mailing.mailing name for required subject field
* fix view reference not_blacklisted with filter_not_email_bl
* fix not-stored compute, set value for all the records

--- a/mail_tracking_mass_mailing/views/mailing_contact_view.xml
+++ b/mail_tracking_mass_mailing/views/mailing_contact_view.xml
@@ -6,7 +6,7 @@
 
 <record model="ir.ui.view" id="view_mail_mass_mailing_contact_tree">
     <field name="name">Add email score and stars</field>
-    <field name="model">mail.mass_mailing.contact</field>
+    <field name="model">mailing.contact</field>
     <field name="inherit_id" ref="mass_mailing.view_mail_mass_mailing_contact_tree"/>
     <field name="arch" type="xml">
         <field name="is_blacklisted" position="after">
@@ -18,10 +18,10 @@
 
 <record model="ir.ui.view" id="view_mail_mass_mailing_contact_search">
     <field name="name">Filter bounced contacts</field>
-    <field name="model">mail.mass_mailing.contact</field>
+    <field name="model">mailing.contact</field>
     <field name="inherit_id" ref="mass_mailing.view_mail_mass_mailing_contact_search"/>
     <field name="arch" type="xml">
-        <filter name="not_blacklisted" position="after">
+        <filter name="filter_not_email_bl" position="after">
             <filter string="Email bounced" name="email_bounced"
                     domain="[('email_bounced', '=', True)]"/>
         </filter>
