mail_outbound_static: Domain whitelist based logic.

--- a/mail_outbound_static/views/ir_mail_server_view.xml
+++ b/mail_outbound_static/views/ir_mail_server_view.xml
@@ -11,6 +11,7 @@
         <field name="inherit_id" ref="base.ir_mail_server_form" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='smtp_pass']" position="after">
+                <field name="domain_whitelist"/>
                 <field name="smtp_from" />
             </xpath>
         </field>
