--- a/mass_mailing_custom_unsubscribe/views/mail_mass_mailing_list_view.xml
+++ b/mass_mailing_custom_unsubscribe/views/mail_mass_mailing_list_view.xml
@@ -5,8 +5,8 @@
 <odoo>
 
     <record id="view_mail_mass_mailing_list_form" model="ir.ui.view">
-        <field name="model">mail.mass_mailing.list</field>
-        <field name="inherit_id" ref="mass_mailing.view_mail_mass_mailing_list_form"/>
+        <field name="model">mailing.list</field>
+        <field name="inherit_id" ref="mass_mailing.mailing_list_view_form"/>
         <field name="arch" type="xml">
             <field name="is_public" position="after">
                 <field name="not_cross_unsubscriptable"
