new changes to squash after review:
- fix misspellings errors in documentation
- add unit test to avoid github checkers red status in codecov tests.
- add validation of email from and domain whitelist fields.
- update documentation remove roadmap for already updated functionalities.
- update translations

--- a/mail_outbound_static/views/ir_mail_server_view.xml
+++ b/mail_outbound_static/views/ir_mail_server_view.xml
@@ -12,7 +12,7 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='smtp_pass']" position="after">
                 <field name="domain_whitelist"/>
-                <field name="smtp_from" />
+                <field name="smtp_from" widget="email"/>
             </xpath>
         </field>
     </record>
