--- a/mass_mailing_event_registration_exclude/views/mailing_mailing_views.xml
+++ b/mass_mailing_event_registration_exclude/views/mailing_mailing_views.xml
@@ -6,7 +6,7 @@
 
 <record model="ir.ui.view" id="view_mail_mass_mailing_form">
     <field name="name">Add event and exclude</field>
-    <field name="model">mail.mass_mailing</field>
+    <field name="model">mailing.mailing</field>
     <field name="inherit_id" ref="mass_mailing.view_mail_mass_mailing_form"/>
     <field name="arch" type="xml">
         <field name="mailing_domain" position="attributes">
