--- a/mail_edit/views/assets.xml
+++ b/mail_edit/views/assets.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<openerp>
-    <data>
-
-        <template id="assets_backend" name="Mail edit assets"
-                  inherit_id="web.assets_backend">
-            <xpath expr="." position="inside">
-                <link rel="stylesheet"
-                      href="/mail_edit/static/src/css/mail_edit.css"/>
-                <script type="text/javascript"
-                        src="/mail_edit/static/src/js/mail_edit.js"/>
-            </xpath>
-        </template>
-
-    </data>
-</openerp>
+<odoo>
+    <template id="assets_backend" name="Mail edit assets"
+              inherit_id="web.assets_backend">
+        <xpath expr="." position="inside">
+            <link rel="stylesheet" type="text/scss"
+                  href="/mail_edit/static/src/scss/mail_edit.scss"/>
+            <script type="text/javascript"
+                    src="/mail_edit/static/src/js/mail_edit.js"/>
+        </xpath>
+    </template>
+</odoo>
