--- a/mail_edit/views/compose_message.xml
+++ b/mail_edit/views/compose_message.xml
@@ -16,13 +16,17 @@
                         <field name="subtype_id" readonly="1"/>
                     </group>
                     <group>
-                        <field name="destination_object_id" required="1" groups="mail_edit.group_mail_edit_mover,mail_edit.group_mail_edit_superuser"/>
+                        <field name="destination_object_id" groups="mail_edit.group_mail_edit_mover,mail_edit.group_mail_edit_superuser"/>
                         <field name="model" invisible="1"/>
                         <field name="res_id" invisible="1"/>
                         <field name="parent_id" readonly="1" />
                     </group>
                 </group>
                 <field name="body" groups="mail_edit.group_mail_edit_editor,mail_edit.group_mail_edit_superuser"/>
+                <footer>
+                    <button string="Save" special="save" class="btn-primary"/>
+                    <button string="Discard" class="btn-secondary" special="cancel" />
+                </footer>
             </sheet>
         </form>
     </field>
