--- a/mail_notification_custom_subject/views/mail_notification_custom_subject_views.xml
+++ b/mail_notification_custom_subject/views/mail_notification_custom_subject_views.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
     <data>
         <record model="ir.ui.view" id="mail_notification_custom_subject_form">
@@ -8,14 +8,17 @@
                 <form string="Subject Replacement Templates">
                     <sheet>
                         <div class="oe_title">
-                            <label for="name" class="oe_edit_only"/>
-                            <h1 name="name"><field name="name"/></h1>
+                            <label for="name" class="oe_edit_only" />
+                            <h1 name="name"><field name="name" /></h1>
                         </div>
                         <group>
-                            <field name="subject_template" placeholder="Subject (placeholders may be used here)"/>
-                            <field name="model_id"/>
+                            <field
+                                name="subject_template"
+                                placeholder="Subject (placeholders may be used here)"
+                            />
+                            <field name="model_id" />
                             <field name="subtype_ids" widget="many2many_tags" />
-                            <field name="position"/>
+                            <field name="position" />
                         </group>
                     </sheet>
                 </form>
@@ -27,15 +30,18 @@
             <field name="model">mail.message.custom.subject</field>
             <field name="arch" type="xml">
                 <tree string="Templates">
-                    <field name="name"/>
-                    <field name="model_id"/>
-                    <field name="subtype_ids"/>
-                    <field name="subject_template"/>
+                    <field name="name" />
+                    <field name="model_id" />
+                    <field name="subtype_ids" />
+                    <field name="subject_template" />
                 </tree>
             </field>
         </record>
 
-        <record model="ir.actions.act_window" id="action_mail_notification_custom_subject_tree_all">
+        <record
+            model="ir.actions.act_window"
+            id="action_mail_notification_custom_subject_tree_all"
+        >
             <field name="name">Subject Replacement Templates</field>
             <field name="res_model">mail.message.custom.subject</field>
             <field name="view_type">form</field>
@@ -43,8 +49,12 @@
             <field name="view_id" ref="mail_notification_custom_subject_tree" />
         </record>
 
-        <menuitem id="menu_mail_notification_custom_subject" parent="base.menu_email" action="action_mail_notification_custom_subject_tree_all"
-                  sequence="21"/>
+        <menuitem
+            id="menu_mail_notification_custom_subject"
+            parent="base.menu_email"
+            action="action_mail_notification_custom_subject_tree_all"
+            sequence="21"
+        />
 
     </data>
 </odoo>
