[IMP] website_mass_mailing_name: black, isort, prettier

--- a/website_mass_mailing_name/static/src/css/website_mass_mailing_name.scss
+++ b/website_mass_mailing_name/static/src/css/website_mass_mailing_name.scss
@@ -3,6 +3,6 @@
 .js_subscribe .form-control {
     width: 50%;
 }
-.js_subscribe[data-subscribe=on] .js_subscribe_name:not([disabled]) {
+.js_subscribe[data-subscribe="on"] .js_subscribe_name:not([disabled]) {
     display: none;
 }
