--- a/website_mass_mailing_name/templates/snippets.xml
+++ b/website_mass_mailing_name/templates/snippets.xml
@@ -1,18 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <!-- Copyright 2016-2017 Jairo Llopis <jairo.llopis@tecnativa.com>
      License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). -->
-
 <odoo>
 
-<template id="s_newsletter_subscribe_form"
-          inherit_id="website_mass_mailing.s_newsletter_subscribe_form">
-    <xpath expr="//input[hasclass('js_subscribe_email')]"
-           position="before">
+<template
+        id="s_newsletter_subscribe_form"
+        inherit_id="website_mass_mailing.s_newsletter_subscribe_form"
+    >
+    <xpath expr="//input[hasclass('js_subscribe_email')]" position="before">
         <input
-            name="name"
-            class="js_subscribe_name form-control"
-            required="required"
-            placeholder="your name..."/>
+                name="name"
+                class="js_subscribe_name form-control"
+                required="required"
+                placeholder="your name..."
+            />
     </xpath>
     <xpath expr="//input[hasclass('js_subscribe_email')]" position="attributes">
         <attribute name="required">required</attribute>
