--- a/website_mass_mailing_name/templates/assets.xml
+++ b/website_mass_mailing_name/templates/assets.xml
@@ -16,4 +16,17 @@
     </xpath>
 </template>
 
+<template
+        id="assets_tests"
+        inherit_id="website.assets_tests"
+        name="Website Mass Mailing Name"
+    >
+    <xpath expr="." position="inside">
+        <script
+                type="text/javascript"
+                src="/website_mass_mailing_name/static/src/js/admin_and_public_tour.js"
+            />
+    </xpath>
+</template>
+
 </odoo>
