[IMP] differenciate users and partners in mail filter

--- a/mail_filter_adressee_by_contact/views/mail_invoice_send_view.xml
+++ b/mail_filter_adressee_by_contact/views/mail_invoice_send_view.xml
@@ -5,9 +5,15 @@
         <field name="model">account.invoice.send</field>
         <field name="inherit_id" ref="account.account_invoice_send_wizard_form" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='template_id']" position="after">
-                <field name="apply_filter" />
-            </xpath>
+            <field name="partner_ids" position="before">
+                <div>
+                    <field
+                        name="apply_filter"
+                        widget="radio"
+                        options="{'horizontal': True}"
+                    />
+                </div>
+            </field>
         </field>
     </record>
 </odoo>
