--- a/mail_filter_adressee_by_contact/views/mail_compose_message_view.xml
+++ b/mail_filter_adressee_by_contact/views/mail_compose_message_view.xml
@@ -7,8 +7,11 @@
         <field name="arch" type="xml">
             <field name="partner_ids" position="before">
                 <div>
-                    <field name="apply_filter" widget="boolean_toggle" />
-                    <span name="apply_filter">Filter Email</span>
+                    <field
+                        name="apply_filter"
+                        widget="radio"
+                        options="{'horizontal': True}"
+                    />
                 </div>
             </field>
         </field>
