--- a/mail_send_copy/views/view_res_users.xml
+++ b/mail_send_copy/views/view_res_users.xml
@@ -20,7 +20,7 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
         <field name="model">res.users</field>
         <field name="inherit_id" ref="base.view_users_form"/>
         <field name="arch" type="xml">
-            <field name="email" position="after">
+            <field name="notification_type" position="after">
                 <field name="mail_send_copy"/>
             </field>
         </field>
