--- a/mail_tracking_mass_mailing/views/mail_trace_view.xml
+++ b/mail_tracking_mass_mailing/views/mail_trace_view.xml
@@ -17,8 +17,10 @@
             <div>
                 <field name="tracking_event_ids">
                     <tree
-                            string="Tracking events"
-                            colors="grey:event_type in ('deferral');black:event_type in ('send');red:event_type in ('hard_bounce', 'soft_bounce', 'spam', 'reject');blue:event_type in ('unsub', 'click', 'open')"
+                            decoration-muted="event_type in ('deferral')"
+                            decoration-bf="event_type in ('send')"
+                            decoration-danger="event_type in ('hard_bounce', 'soft_bounce', 'spam', 'reject')"
+                            decoration-info="event_type in ('unsub', 'click', 'open')"
                         >
                         <field name="time" />
                         <field name="event_type" />
