--- a/mail_improved_tracking_value/views/mail_tracking_value.xml
+++ b/mail_improved_tracking_value/views/mail_tracking_value.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
+    <record id="view_mail_tracking_value_tree" model="ir.ui.view">
+        <field name="name">mail.tracking.value.tree</field>
+        <field name="model">mail.tracking.value</field>
+        <field name="inherit_id" ref="mail.view_mail_tracking_value_tree"/>
+        <field name="arch" type="xml">
+            <field name="field" position="before">
+                <field name="write_date"/>
+                <field name="change_user"/>
+            </field>
+        </field>
+    </record>
+
     <record id="tracking_change_list" model="ir.ui.view">
         <field name="name">Tracking change list"</field>
         <field name="model">mail.tracking.value</field>
@@ -39,23 +51,6 @@
                     </group>
                 </sheet>
             </form>
-        </field>
-    </record>
-
-    <record id="tracking_change_list_filter" model="ir.ui.view">
-        <field name="name">Tracking change list filter</field>
-        <field name="model">mail.tracking.value</field>
-        <field name="arch" type="xml">
-            <search string="Search">
-                <field name="model" />
-                <group expand="1" string="Group By">
-                    <filter
-                        name="model"
-                        string="Model"
-                        context="{'group_by':'model'}"
-                    />
-                </group>
-            </search>
         </field>
     </record>
 
