--- a/mail_attach_existing_attachment/wizard/mail_compose_message_view.xml
+++ b/mail_attach_existing_attachment/wizard/mail_compose_message_view.xml
@@ -6,11 +6,8 @@
         <field name="inherit_id" ref="mail.email_compose_message_wizard_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='attachment_ids']" position="after">
+                <field name="object_attachment_ids" widget="many2many_checkboxes" domain="[('res_model', '=', model), ('res_id', '=', res_id)]" attrs="{'invisible': [('can_attach_attachment', '=', False)]}"/>
                 <field name="can_attach_attachment" invisible="1"/>
-                <div attrs="{'invisible': [('can_attach_attachment', '=', False)]}">
-                    <br />
-                    <field name="object_attachment_ids" widget="many2many_checkboxes" domain="[('res_model', '=', model), ('res_id', '=', res_id)]" />
-                </div>
             </xpath>
         </field>
     </record>
