--- a/mail_tracking/views/res_partner_view.xml
+++ b/mail_tracking/views/res_partner_view.xml
@@ -19,7 +19,9 @@
                     attrs="{'invisible': [('email', '=', False)]}">
                 <field name="tracking_emails_count"
                        widget="statinfo"
-                       string="Tracking emails"/>
+                       string="Tracking emails"
+                       attrs="{'invisible': [('tracking_emails_count', '=', False)]}"
+                />
             </button>
         </div>
         <xpath expr="//field[@name='email']/.." position="after">
