[IMP] mail_tracking_mailgun: mass mailing manual tracking
Mass mailing are tracked from mail.trace as the don't store a message in
the db. In order to gather the message_id and be able to do manual
checks to mailgun, that's the table where we should get the message id.

TT40816

--- a/mail_tracking_mailgun/views/mail_tracking_email.xml
+++ b/mail_tracking_mailgun/views/mail_tracking_email.xml
@@ -7,10 +7,12 @@
         <field name="inherit_id" ref="mail_tracking.view_mail_tracking_email_form" />
         <field name="arch" type="xml">
             <field name="state" position="before">
+                    <field name="message_id" invisible="1" />
                     <button
                     name="action_manual_check_mailgun"
                     type="object"
                     string="Re-sync Mailgun"
+                    attrs="{'invisible': [('message_id', '=', False)]}"
                 />
             </field>
         </field>
