[IMP] if server has no catchall support, there should be Reply-To message field modified, so the replies returns to the same address, we used for 'From' field So there is special flag added, user can easily turn this option on

--- a/mail_outbound_static/views/ir_mail_server_view.xml
+++ b/mail_outbound_static/views/ir_mail_server_view.xml
@@ -13,6 +13,10 @@
             <xpath expr="//field[@name='smtp_pass']" position="after">
                 <field name="domain_whitelist" />
                 <field name="smtp_from" widget="email" />
+                <field
+                    name="reply_to_the_same_address"
+                    attrs="{'invisible': [('smtp_from', '=', False)]}"
+                />
             </xpath>
         </field>
     </record>
