--- a/mass_mailing_subscription_date/views/mailing_contact_subscription.xml
+++ b/mass_mailing_subscription_date/views/mailing_contact_subscription.xml
@@ -7,6 +7,7 @@
 <odoo>
 
     <record id="mailing_contact_subscription_view_form" model="ir.ui.view">
+        <field name="name">mailing.contact.subscription.view.form.inherit</field>
         <field name="model">mailing.contact.subscription</field>
         <field
             name="inherit_id"
