--- a/mail_attach_existing_attachment/wizard/mail_compose_message_view.xml
+++ b/mail_attach_existing_attachment/wizard/mail_compose_message_view.xml
@@ -7,10 +7,9 @@
         <field name="model">mail.compose.message</field>
         <field name="inherit_id" ref="mail.email_compose_message_wizard_form" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='attachment_ids']" position="after">
+            <xpath expr="//field[@name='attachment_ids']/../.." position="after">
                 <field name="can_attach_attachment" invisible="1" />
                 <div attrs="{'invisible': [('can_attach_attachment', '=', False)]}">
-                    <br />
                     <field
                         name="object_attachment_ids"
                         widget="many2many_checkboxes"
